# booster-uc-ball-hyp-generator

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/: benchmark_model_by_images.py  benchmark_model_by_patches.py  compare_precision_accuracy.py  config.py  csv_label_reader.py  custom_metrics.py  dataset_handling.py  deploy.py  export_tensorrt.py  inference_tensorrt.py  main.py  model_setup.py  models.py  scale.py  tensorrt_example.py  training.py  utils.py  visualize_model.py
src/naoteam_boost_uc_ball_hyp_generator/: __init__.py  csv_label_reader.py  custom_metrics.py  dataset_handling.py  deploy.py  inference_tensorrt.py  logger.py  main.py  model_evaluation.py  model_setup.py  scale.py  tensorrt_example.py  utils.py
src/uc_ball_hyp_generator/: __init__.py  benchmark_model_by_images.py  benchmark_model_by_patches.py  color_conversion.py  compare_precision_accuracy.py  config.py  csv_label_reader.py  custom_metrics.py  dataset_handling.py  deploy.py  early_stopping_on_lr.py  export_tensorrt.py  inference_tensorrt.py  main.py  model_evaluation.py  model_setup.py  models.py  scale.py  tensorrt_example.py  training.py  visualize_model.py  visualize_model_archtecture.py
src/uc_ball_hyp_generator/classifier/: __init__.py  config.py  dataset.py  export_to_onnx.py  main.py  model.py  utils.py
src/uc_ball_hyp_generator/hyp_generator/: ball_hypothesis_image_scaler.py  ball_statistics.py  config.py  dataset_handling.py  deploy.py  export_to_onnx.py  main.py  model.py  model_setup.py  patch_bounds.py  patch_found_ball_metric.py  scale_patch.py  training.py  utils.py  visualize_model_archtecture.py
src/uc_ball_hyp_generator/hyp_generator/visualization/: ball_detection_adapter.py  launch_ball_visualizer.py
src/uc_ball_hyp_generator/labelingtool/: __init__.py  bounding_box.py  cli.py  config.py  gui.py  image_canvas.py  model.py  persistence.py  pyproject.toml  resizable_rect_item.py  rubberband_item.py  sam.py  shape.py  shortcuts_overlay.py
src/uc_ball_hyp_generator/labelingtool/utils/: __init__.py  logger.py
src/uc_ball_hyp_generator/layer/: big_little_reduction.py  conv2dbn.py  seblock.py
src/uc_ball_hyp_generator/utils/: binary_classifier_statistics.py  clamp.py  common_model_operations.py  csv_label_reader.py  flops.py  logger.py  scale.py  scale_patch.py  split_dataset.py
src/uc_ball_hyp_generator/visualization/: __init__.py  ball_detection_adapter.py  create_ball_statistics.py  launch_ball_visualizer.py
tests/: __init__.py  test_bounding_box.py  test_config.py  test_csv_label_reader.py  test_custom_metrics.py  test_dataset_handling.py  test_gui_skeleton.py  test_import.py  test_labelingtool_persistence.py  test_model_setup.py  test_scale.py  test_utils.py  test_zoom_pan.py
tests/uc_ball_hyp_generator_tests/: __init__.py  test_color_conversion.py  test_csv_label_reader.py  test_custom_metrics.py  test_dataset_handling.py  test_gpu_augmentation.py  test_model_setup.py  test_scale.py  test_utils.py
