[project]
name = "uc-ball-hyp-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "numpy>=1.21.0",
    "tensorrt>=8.0.0",
    "torchinfo>=1.8.0",
    "naoteamhtwk_machinelearning_visualizer>=0.2.1",
    "blake3>=1.0.5",
    "kornia>=0.8.1",
    "tqdm>=4.67.1",
    "scikit-learn>=1.7.2",
    "pandas>=2.3.2",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.10",
    "ty>=0.0.1a19",
    "pytest>=8.0.0",
    "aider>=0.2.6",
]
types = ["pandas-stubs>=2.3.2.250827", "types-tqdm>=4.67.0.20250809"]


[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.ruff]
line-length = 120

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
naoteamhtwk_machinelearning_visualizer = { git = "ssh://git@github.com/tkalbitz/naoteam-machine-learning-visualizer.git" }

[tool.mypy]
exclude = ["^model/$", '^logs/$']

[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torchvision.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true
